@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor MODEL_COLOR
skinparam classBackgroundColor MODEL_COLOR


class ExportCommand {
    - String format
    - static final String MESSAGE_ARGUMENTS
    - static final String COMMAND_WORD
    - static final String MESSAGE_USAGE
    - static final String SUCCESS_MESSAGE
    + ExportCommand(String)
    + execute(Model): CommandResult
    + static readAndParseJson(String): List<Map<String, String>>
    + static extractHeaders(List<Map<String, String>>): Set<String>
    + static writeCsvFile(List<Map<String, String>>, Set<String>, String)
    + equals(Object): boolean
}

abstract class Command {
    # execute(Model): CommandResult
}

class CommandResult {
    - String feedbackToUser
    - boolean showHelp
    - boolean exit

    + CommandResult(String, boolean, boolean): void
    + CommandResult(String): void
    + String getFeedbackToUser(): String
    + isShowHelp(): boolean
    + isExit(): boolean
    + equals(Object): boolean
    + hashCode(): int
    + toString(): String
}

class Model {
    + setUserPrefs(ReadOnlyUserPrefs)
    + getUserPrefs(): ReadOnlyUserPrefs
    + getGuiSettings(): GuiSettings
    + vsetGuiSettings(GuiSettings)
    + getAddressBookFilePath(): Path
    + setAddressBookFilePath(Path)
    + setAddressBook(ReadOnlyAddressBook)
    + getAddressBook(): ReadOnlyAddressBook
    + hasPerson(Person): boolean
    + deletePerson(Person)
    + addPerson(Person)
    + setPerson(Person, Person)
    + getFilteredPersonList(): ObservableList<Person>
    + void updateFilteredPersonList(Predicate<Person>): void

    - static final Predicate<Person> PREDICATE_SHOW_ALL_PERSONS
}

Command <|-- ExportCommand
ExportCommand --> CommandResult
ExportCommand --> Model

@enduml
